# cmake_cpp_project

./: README.md
example_oled/: CMakeLists.txt
example_oled/src/: CMakeLists.txt  main.cpp
example_oled/src/HardWare/: CMakeLists.txt
example_oled/src/HardWare/oled/: HAL_OLED.cpp  HAL_OLED.h  OLED_Data.h
example_oled/src/Peripheral/: CMakeLists.txt
example_oled/src/Peripheral/i2c/: i2c_hard.hpp
example_oled/src/Peripheral/uart/: uart.hpp
example_oled/src/System/: CMakeLists.txt  EpollManager.cpp  SystemState.cpp  SystemState.hpp
example_thread/: CMakeLists.txt  README.md  TOOLCHAIN_GUIDE.md
example_thread/cmake/: aarch64-none-linux-gnu.cmake  arm-rockchip830.cmake  arm64-buildroot.cmake
example_thread/src/: CMakeLists.txt  main.cpp
example_thread/src/Peripheral/: CMakeLists.txt
example_uart/: CMakeLists.txt  README.md
example_uart/src/: CMakeLists.txt  main.cpp
example_uart/src/Peripheral/: CMakeLists.txt
example_uart/src/Peripheral/Epoll/: EpollManager.hpp
template_cmake/: CMakeLists.txt
template_cmake/cmake/: arm-rockchip830.cmake
template_cmake/src/: CMakeLists.txt  main.cpp
template_cmake/src/Peripheral/: CMakeLists.txt
